--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicon-32x32.png">
-  
+ 
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
   <link rel='stylesheet' type='text/css' href="./src/css/dark-theme.css" />
   <link rel="stylesheet" type="text/css" href="./src/css/index.css" />
   <title>Frontend Mentor | Todo app</title>
@@ -14,13 +18,13 @@
 <body>
   <!-- <div class=""> -->
     <div class="app-image">
-      <img src="./public/images/bg-mobile-dark.jpg" alt="header background" 
-      width="100%" height="auto" />
+       <!-- <img src="images/bg-mobile-dark.jpg" alt="header background"  -->
+      <!-- width="100%" height="auto" /> -->
     </div>
     <main class="ui main">
       <div class="header">
         <h1>T O D O</h1>
-        <img src="./public/images/icon-sun.svg" alt="" />
+        <img src="/images/icon-sun.svg" alt="" />
       </div>
       <div id="content"></div>
     </main>
