--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
   <!-- </div> -->
 </body>
 <script type="module" src="./src/main.jsx"></script>
-<script type="module" src="./helpers/mode_switch.js"></script>
+<script src="./helpers/mode_switch.js"></script>
 </html>
