--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <body>
   <div id="content"></div>
 </body>
-<script type="module" src="./src/main.jsx"></script>
+<script defer type="module" src="./src/main.jsx"></script>
 </html>
