--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicon-32x32.png">
-  <link rel='stylesheet' type='text/css' id="theme" href="./src/css/dark-theme.css" />
+  <link rel='stylesheet' type='text/css' id="themeStylesheet" href="./src/css/dark-theme.css" />
   <link rel="stylesheet" type="text/css" href="./src/css/index.css" />
   <title>Frontend Mentor | Todo app</title>
 </head>
