Move css folder to public
Deleted unsed files from previous version

Simplified the 'useThemeSwitch' hook

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicon-32x32.png">
-  <link rel='stylesheet' type='text/css' id="themeStylesheet" href="./src/css/dark-theme.css" />
-  <link rel="stylesheet" type="text/css" href="./src/css/index.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel='stylesheet' type='text/css' id="themeStylesheet" href="/css/dark-theme.css" />
+  <link rel="stylesheet" type="text/css" href="/css/index.css" />
   <title>Frontend Mentor | Todo app</title>
 </head>
 
 <body>
   <div id="content"></div>
 </body>
-<script defer type="module" src="./src/main.jsx"></script>
+<script type="module" src="./src/main.jsx"></script>
 </html>
