--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" type="text/css" href="./src/css/index.css" />
   <link rel="icon" type="image/png" sizes="32x32" href="./public/images/favicon-32x32.png">
+  
+  <link rel='stylesheet' type='text/css' href="./src/css/dark-theme.css" />
+  <link rel="stylesheet" type="text/css" href="./src/css/index.css" />
   <title>Frontend Mentor | Todo app</title>
 </head>
 
 <body>
-  <div class="app-image">
-    <img src="./public/images/bg-mobile-dark.jpg" alt="header background" 
-    width="100%" height="auto" />
-  </div>
-  <main class="ui main">
-    <div class="header">
-      <h1>T O D O</h1>
-      <img src="./public/images/icon-sun.svg" alt="" />
+  <!-- <div class=""> -->
+    <div class="app-image">
+      <img src="./public/images/bg-mobile-dark.jpg" alt="header background" 
+      width="100%" height="auto" />
     </div>
-    <div id="content"></div>
-  </main>
+    <main class="ui main">
+      <div class="header">
+        <h1>T O D O</h1>
+        <img src="./public/images/icon-sun.svg" alt="" />
+      </div>
+      <div id="content"></div>
+    </main>
+  <!-- </div> -->
 </body>
 <script type="module" src="./src/main.jsx"></script>
 </html>
